# rec_sandbox

./: README.md  pyproject.toml  test.ipynb
src/rec_sandbox/: __init__.py  data.py  dataset.py  main.py  preprocess.py  sasrec.py  train.py
